# memoria

./: .gitignore  README.md
backend-service-py/: .env.example  README.md  check_chapters_columns.py  db_migrate_story.py  debug_memoir.py  drop_deprecated_columns.py  mic_client.py  mic_test.py  migrate_stories.py  pyproject.toml  requirements.txt  seed_data.py  start.sh  stream_test.py
backend-service-py/app/: config.py  main.py
backend-service-py/app/api/: deps.py
backend-service-py/app/api/v1/: auth.py  chapter.py  media.py  memoir.py  recording.py  speech.py  story.py
backend-service-py/app/core/: cache.py  db.py  security.py  storage.py
backend-service-py/app/models/: __init__.py
backend-service-py/app/schemas/: auth.py  base.py  chapter.py  media.py  memoir.py  recording.py  story.py
backend-service-py/app/services/: asr.py  auth.py  chapter.py  media.py  memoir.py  recording.py  speech.py  story.py
backend-service-py/app/utils/: http.py  response.py
docs/: DROP_DEPRECATED_COLUMNS.md  backend-service.md  characters.md  content_1_zhangdaming_ch1.md  content_1_zhangdaming_ch2.md  content_1_zhangdaming_ch3.md  content_2_lixiufang_ch1.md  content_2_lixiufang_ch2.md  content_2_lixiufang_ch3.md  content_2_lixiufang_ch4.md  content_2_lixiufang_ch5.md  content_3_wangjianguo_ch1.md  content_3_wangjianguo_ch2-7.md  content_4_liudehua_ch1-4.md  content_plan.md  dev_user_switching.md  frontend.md  frontend_backend_testing.md  frontend_startup_guide.md  implementation_plan.md  login_guide.md  memoir_data_index.md  progress.md  qwen3_integration.md  task.md  (+1 more)
(+80 files in other folders)
